--- a/13-conclusion.Rmd
+++ b/13-conclusion.Rmd
@@ -11,7 +11,7 @@ Todas las referencias incluyen un enlace para que las consultes en línea, sin c
 
 ¡Suerte!
 
-## Material de referencia
+**Material de referencia**
 
 Probabilidad y estadística (introductorio a medio)
 
